syntax = "proto3";

option csharp_namespace = "Realmar.Jobbernetes.Demo.GRPC.ExternalService";

package scrape;


service ExternalDataService {
	rpc GetActor (IdRequest) returns (ActorReply);
  rpc GetMusic (IdRequest) returns (MusicReply);
	rpc GetMovie (IdRequest) returns (MovieReply);
	rpc GetGame (IdRequest) returns (GameReply);
}

message IdRequest {
	 int32 id = 1;
}

message ActorReply {
	int32 id = 1;
	string firstname = 2;
	string lastname = 3;
	int32 age = 4;
	string nationality = 5;
}

message MusicReply {
	int32 id = 1;
	string title = 2;
	string artist = 3;
	string genre = 4;
	repeated string composers = 5;
	repeated string conducters = 6;
}

message MovieReply {
	int32 id = 1;
	string title = 2;
	string genre = 3;
	string producer = 4;
	int32 book = 5;
	repeated int32 actors = 6;
	repeated int32 soundtracks = 7;
}

message GameReply {
	int32 id = 1;
	string title = 2;
	string studio = 3;
	string publisher = 4;
  oneof source {
		int32 book = 5;
		int32 movie = 6;
	}
	repeated int32 soundtracks = 7;
}
